--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,20 +1,69 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-md-offset-1 update-trick">
+                <div class="card card-small mb-4 mt-5">
+                    <div class="card-header border-bottom text-center">
+                        <h3 class="m-0">Gérer les tricks</h3>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item p-3">
+                            <div class="row">
+                                <div class="col">
+                                    {% for message in app.flashes('success') %}
+                                        <div class="alert alert-success">
+                                            {{ message }}
+                                        </div>
+                                    {% endfor %}
+                                    <div class="form-row">
+                                        <div class="form-group col-md-12">
+                                            <div class="text-center">
+                                    <table class="table table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th>Nom</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {% for trick in tricks %}
+                                            <tr>
+                                                <td>{{ trick.name }}</td>
+                                                <td>
+                                                    <a href="{{ path('admin.trick.edit', {id: trick.id}) }}"
+                                                       class="btn btn-secondary">Editer</a>
+                                                    <form method="post"
+                                                          action="{{ path('admin.trick.delete', {id: trick.id}) }}"
+                                                          style="display: inline-block"
+                                                          onsubmit="return confirm('Vous êtes sûr?')">
+                                                        <input type="hidden" name="_method" value="DELETE">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+                                                        <button class="btn btn-danger">Supprimer</button>
+                                                    </form>
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Pc/Desktop/Projetsnow/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Pc/Desktop/Projetsnow/templates/admin/_form.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-    </ul>
-</div>
+                                        </tbody>
+                                    </table>
+
+                                    <div class="text-right">
+                                        <a href="{{ path('admin.trick.new') }}" class="btn btn-primary">Créer un nouveau
+                                            trick</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+
 {% endblock %}
