--- a/templates/trick/add.html.twig
+++ b/templates/trick/add.html.twig
@@ -4,15 +4,23 @@
 {% form_theme form _self %}
 
 {% block body %}
-    <!-- Start Create Trick -->
-    <div class="container mt-5">
-        <div class="row justify-content-center ">
-            <div class="col-md-12 col-md-offset-1  mb-4">
-                <div class="card mt-5">
-
-                    <div class="card-header border-bottom">
-                        <h3 class="m-0">Ajouter votre trick</h3>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-md-offset-1 update-trick">
+                <div class="card card-small mb-4">
+                    <div class="card-header border-bottom text-center">
+                        <h3 class="m-0">Créer le trick</h3>
                     </div>
+                    {% for message in app.flashes('success') %}
+                        <div class="alert alert-success">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    {% if error %}
+                        <div class="alert alert-danger">
+                            {{ error | trans ({}, 'error') }}
+                        </div>
+                    {% endif %}
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item p-3">
                             <div class="row">
@@ -62,8 +70,18 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="col-md-8 offset-md-2">
+                                        <div class="form-row">
+                                            <div class="form-group col-md-12">
+                                                {{ form_row(form.description) }}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            {{ form_row(form.type) }}
+                                        </div>
+                                    </div>
                                     <div class="form-group mt-4 text-center">
-                                        <button type="submit" class="btn btn-success">Ajouter le trick</button>
+                                        <button type="submit" class="btn btn-success">Ajouter</button>
                                     </div>
                                     {{ form_end(form) }}
                                 </div>
@@ -74,7 +92,4 @@
             </div>
         </div>
     </div>
-
-
-    <!-- End Create Trick -->
 {% endblock %}
